# rust_azure_identity

./: .gitignore  Cargo.toml  README.md
src/: main.rs
